--- a/styles.css
+++ b/styles.css
@@ -24,10 +24,12 @@ body{
 }
 
 h1{
+    font-weight: bold;
     font-size: 2.5rem;
     position: relative;   
     border-bottom: 2px solid var(--greyText);
-    margin: 7px;
+    margin: 5px;
+    margin-top: 3px;
     color: red;
 }
 
