--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ h1{
     font-weight: bold;
     font-size: 2.5rem;
     position: relative;   
-    border-bottom: 2px solid var(--greyText);
+    //border-bottom: 2px solid var(--greyText);
     margin: 5px;
     color: red;
 }
@@ -46,7 +46,7 @@ h1{
         
 
 h4{
-    margin: 0;
+    margin-bottom: 2px;
     font-size: 1.3rem;
 }
 
