--- a/styles.css
+++ b/styles.css
@@ -26,21 +26,22 @@ body{
 h1{
     font-weight: bold;
     font-size: 2.5rem;
-    position: relative;   
-    //border-bottom: 2px solid var(--greyText);
+    position: relative;
+    margin: 0;
+    border-bottom: 2px solid rgb(190, 190, 190);
     color: red;
 }
 
-/*h1:after{
+h1:after{
     position: absolute;
     content: '';
-    background: var(--SecondaryColor);
+    background: hsl(187, 85%, 43%);
     height: 14px;
     width: 320px;
     right: 0;
     bottom: +15px;
     z-index: -1;
-} */
+}
 
         
 
