--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 *{
     font-family: 'Poppins', sans-serif;
@@ -24,24 +23,16 @@ body{
 }
 
 h1{
+	position: relative;
     font-weight: bold;
     font-size: 2rem;
     position: relative;
     margin: 0;
-    border-bottom: 2px solid rgb(190, 190, 190);
     color: red;
+	text-align: center;
 }
 
-h1:after{
-    position: absolute;
-    content: '';
-    background: hsl(187, 85%, 43%);
-    height: 14px;
-    width: 320px;
-    right: 0;
-    bottom: +15px;
-    z-index: -1;
-}
+
 
         
 
@@ -65,10 +56,10 @@ h4{
 }*/
 
 .title.container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	margin-bottom: 5px;
+
 }
+
 
 .subtitle.container{
     display: flex;
@@ -83,3 +74,10 @@ h4{
     //padding-bottom: 3rem;
 }
 
+img{
+	height:40px;
+	position: absolute;
+	left: 20px;
+	right: 0px; 	
+	
+}
