--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,8 @@ body{
 }
 
 h1{
-	position: relative;
     font-weight: bold;
     font-size: 2rem;
-    position: relative;
     margin: 0;
     color: red;
 	text-align: center;
@@ -56,7 +54,8 @@ h4{
 }*/
 
 .title.container{
-
+    position: relative;
+	margin-bottom: 5px;
 
 }
 
@@ -75,9 +74,9 @@ h4{
 }
 
 img{
-	height:90px;
+	height:58px;
 	position: absolute;
-	left: 20px;
-	right: 0px; 	
+	left: 0.3rem;
+	top: 0.3rem;	
 	
 }
