--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ h1{
     font-weight: bold;
     font-size: 2rem;
     margin: 0;
+    padding: 0;
     color: red;
 	text-align: center;
 }
@@ -55,6 +56,8 @@ h4{
 
 .title.container{
     position: relative;
+	margin: 0;
+	padding: 0;
 	margin-bottom: 5px;
 
 }
@@ -74,7 +77,7 @@ h4{
 }
 
 img{
-	height:58px;
+	height:48px;
 	position: absolute;
 	left: 0.3rem;
 	top: 0.3rem;	
