--- a/styles.css
+++ b/styles.css
@@ -27,8 +27,10 @@ h1{
     font-size: 2rem;
     margin: 0;
     padding: 0;
-    color: red;
-	text-align: center;
+    color: rgba(224,0,77,1);
+    text-align: center;
+    text-decoration: underline;
+    text-decoration-color: rgba(21,65,109,1);
 }
 
 
