--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ h4{
     position: relative;
 	margin: 0;
 	padding: 0;
-	margin-bottom: 15px;
+	margin-bottom: .5rem;
 
 }
 
@@ -70,6 +70,7 @@ h4{
     display: flex;
     justify-content: center;
     align-items: center; 
+    margin-bottom: 2rem;
 }
 
 .video.container{
