--- a/styles.css
+++ b/styles.css
@@ -29,8 +29,7 @@ h1{
     padding: 0;
     color: rgba(224,0,77,1);
     text-align: center;
-    text-decoration: underline;
-    text-decoration-color: rgba(21,65,109,1);
+    text-decoration: rgba(21,65,109,1) underline;
 }
 
 
@@ -81,10 +80,10 @@ h4{
 }
 
 img{
-	height:44px;
+	height:47px;
 	position: absolute;
-	left: 0.1rem;
-	top: 0.1rem;	
+	left: 0.05rem;
+	top: 0.05rem;	
 	border:
 }
 
