--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,8 @@ h1{
     padding: 0;
     color: rgba(224,0,77,1);
     text-align: center;
-    text-decoration: rgba(21,65,109,1) underline;
+    text-decoration: underline;
+    text-decoration-color: rgba(21,65,109,1);
 }
 
 
