--- a/styles.css
+++ b/styles.css
@@ -80,12 +80,12 @@ h4{
     //padding-bottom: 3rem;
 }
 
-/*img{
+img{
 	height:47px;
 	position: absolute;
 	left: 0.05rem;
 	top: 0.05rem;	
-}*/
+}
 
 iframe {
    border: 4px rgba(21,65,109,0.75) solid;
