--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ h1{
     color: rgba(224,0,77,1);
     text-align: center;
     text-decoration: underline;
-    text-decoration-color: rgba(21,65,109,1);
+    text-decoration-color: rgb(21,65,109);
 }
 
 
