--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ h4{
     position: relative;
 	margin: 0;
 	padding: 0;
-	margin-bottom: .5rem;
+	margin-bottom: .8rem;
 
 }
 
@@ -69,7 +69,7 @@ h4{
     display: flex;
     justify-content: center;
     align-items: center; 
-    margin-bottom: 1.6rem;
+    margin-bottom: 1.4rem;
 }
 
 .video.container{
@@ -87,5 +87,5 @@ img{
 }
 
 iframe {
-   //border: 4px rgba(21,65,109,0.75) solid;
+   border: 4px rgba(21,65,109,0.75) solid;
 }
