--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ h4{
     display: flex;
     justify-content: center;
     align-items: center; 
-    margin-bottom: .6rem;
+    margin-bottom: 1rem;
 }
 
 .video.container{
