--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@
 }
 
 body{
-    background: rgb(240, 240, 246);
+    //background: rgb(240, 240, 246);
     margin: 1rem;
     margin-bottom: 0;
 }
